...
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application Version</string>
    <string name="clear_cache">Clear cache on exit</string>
    <string name="enable_cookies">Enable cookies</string>
    <string name="recommended">Recommended</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
...
    <string name="message_url_copied">Url copied to clipboard</string>
    <string name="licenses">Policies and Licenses</string>
    <string name="block_ads">Block Ads</string>J
    <string name="message_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
...
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="hphosts_ad_server_list">hpHosts Ad Server List</string>
    <string name="settings_general">General</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Details about version, author and license.</string>
    <string name="color_mode">Enable Color Mode</string>
...
    <string name="go">Go</string>
    <string name="show_onboarding_hints">Show hints</string>
    <string name="block_adult_content">Block explicit content</string>
    <string name="imprint">Imprint</string>
    <string name="what_is_humanweb">What is Human Web?</string>
    <string name="enable_human_web">Enable Human Web</string>
    <string name="humanweb">Human Web</string>
    <string name="about_humanweb_url">https://cliqz.com/en/whycliqz/human-web</string>
    <string name="share_link">Share using</string>
...
    <string name="not_shareable">This card is not shareable</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="deleting_in_progress_message">Deleting…</string>
    <string name="add_to_favourites">Add to favorites</string>
...
    <string name="device_registered" translatable="false">Device Registered</string>
    <string name="error_registering" translatable="false">Error registering the device</string>
    <string name="news_notification">News notifications</string>
    <string name="restore_top_sites">Restore most visited websites </string>
    <string name="message_restore_top_sites">Cliqz Tab shows most-visited websites again</string>
...
    <string name="download_failed">Download failed</string>
    <string name="app_not_found">No suitable app found</string>
    <string name="settings_block_ads">Block Ads (Beta)</string>
    <string name="optimized_block_ads">Fair Blocking</string>
    <string name="what_does_optimized_mean">What is \'fair\'?</string>
    <string name="make_video_available_offline">View video offline</string>
...
    <string name="showcace_search_title">Result Cards</string>
    <string name="upload_file_title">Upload File Title</string>
    <string name="autocompletion_enabled">Enable Autocompletion</string>
    <string name="request_desktop_site">Desktop Site</string>
    <string name="title_faq_and_support">FAQs &amp; Support</string>
    <string name="control_center_header_antitracking" translatable="false">Anti-Tracking</string>
    <string name="control_center_header_adblocking">Ad-Blocking</string>
    <string name="control_center_header_antiphishing" translatable="false">Anti-Phishing</string>
...
    <string name="antiphishing_desc">Anti-Phishing technology identifies and blocks potentially deceptive websites that try to get your passwords or account data before you visit the site.</string>
    <string name="learn_more"><u>Learn more</u></string>
    <string name="extension_version" translatable="false">Extension Version</string>
    <string name="open_link_new_tab">Open link in new tab</string>
    <string name="open_image_new_tab">Open image in new tab</string>
...
    <string name="activate">Activate</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="regional_settings">Search results for</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="usa">United States</string>
    <string name="report_site">Report Website</string>
    <string name="clear_passwords">Clear passwords</string>
    <string name="clear_passwords_message">Would you like to clear saved passwords?</string>
...
    <string name="settings_category_notifications"><![CDATA[Subscriptions & Notifications]]></string>
    <string name="settings_category_others">Other</string>
    <string name="settings_show_top_sites">Show most visited websites</string>
    <string name="settings_show_news">Show News</string>
    <string name="cookies">Cookies</string>
    <string name="cache">Cache</string>
    <string name="action_set">Set</string>
    <string name="action_clear">Clear</string>
    <string name="clear_private_data">Clear private data</string>
    <string name="clear_private_data_on_exit">Clear private data on exit</string>
    <string name="find_hint">Find</string>
    <string name="no_wi_fi_title">No Wi-Fi Connection</string>
...
    <string name="can_not_download_in_directory_msg">The app can not write in the selected folder. Please, select a writable one.</string>
    <string name="powered_by_kicker">powered by kicker online</string>
    <string name="reset_subscriptions">Reset all subscriptions</string>
    <string name="reset_subscriptions_title">Reset all subscriptions</string>
    <string name="reset_subscriptions_title_msg">Would you like to reset all your subscriptions (e.g. to Bundesliga games)?</string>
...
    <string name="no_offers_msg">Here you\'ll find a new offer every week</string>
    <string name="myoffrz_settings_header">About MyOffrz</string>
    <string name="news_label">News</string>
    <string name="crux" translatable="false">Crux</string>
    <string name="menu">Menu</string>
    <string name="android_app_settings_title">Location permissions</string>
    <string name="make_default_browser">Make default browser</string>
    <string name="proceed">PROCEED</string>
...
    </plurals>
    <string name="accept">ACCEPT</string>
    <string name="settings_show_background_image">Show background image</string>
    <string name="settings_show_my_offrz">Show MyOffrz</string>
    <string name="settings_about_my_offrz">About MyOffrz</string>
    <string name="myoffrz_activation_description">Activate MyOffrz to receive attractive discounts and bargains.</string>
    <string name="settings_category_user_data_choices">Data Choices</string>
    <string name="send_usage_data">Send usage data</string>
    <string name="send_usage_data_summary">Help us improve your browsing experience. Cliqz collects strictly anonymous usage data. At no occasion is any PII collected.</string>
    <string name="action_later" tools:ignore="MissingTranslation">Later</string>
...
