<?xml version='1.0' encoding='UTF-8'?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="url_bar_search_hint">Cliqz Search</string>
    <string name="app_name">Cliqz Browser</string>
    <string name="shared_using">Shared with Cliqz for Android</string>
    <string name="optimized_block_ads_description">The Cliqz Ad Blocker is in beta at the moment. The final version will provide the following options: Allow Fair Ads (default setting), Block All Ads, Allow All Ads. More https://cliqz.com/whycliqz/adblocking</string>
    <string name="antiphishing_message">Cliqz has blocked access to %1$s because it has been reported as a phishing website. Phishing websites disguise as other sites you may trust in order to trick you into disclosing your login, password or other sensitive information. [Learn more|https://cliqz.com/en/whycliqz/anti-phishing]</string>
    <string name="rate_us">Rate Cliqz Browser</string>
    <string name="summary_adblock_data">Please note: Cliqz Browser has to download some data packages first, before the ad-blocker works efficiently. For this, the app must be connected to Wi-Fi.</string>
    <string name="tips_and_tricks">Get the best out of Cliqz</string>
    <string name="request_location_access">Allow Cliqz Browser to access location information</string>
    <string name="msg_new_icon">Hey, the Cliqz logo is now blue. Check out the new version of the app!</string>
    <string name="share_card_email_subject">I discovered this in the Cliqz Browser</string>
    <string name="settings_category_tab">Cliqz Tab</string>
    <string name="clear_data_summary">Cliqz will automatically clear your data whenever you select \"Exit\" from the main menu.</string>
    <string name="default_browser_title">Cliqz as Default Browser</string>
    <string name="default_browser_message">You seem to like using Cliqz. Do you want to make it your default browser?</string>
    <string name="save_password_text">Do you want Cliqz to save your password for this site?</string>
    <string name="tab_default_url" translatable="false">Cliqz Tab</string>
    <string name="eula_text">The Cliqz for Android browser is built upon the &lt;a href=https://github.com/anthonycr/Lightning-Browser/blob/dev/LICENSE&gt;Lightning Browser open source project&lt;/a&gt; and is made available to you under the terms of the &lt;a href=https://www.mozilla.org/en-US/MPL/2.0/&gt;Mozilla Public License 2.0&lt;/a&gt; a free software license, which gives you the right to run the program for any purpose, to study how it works, to give copies to your friends and to modify it to meet your needs better. There is no separate End User License Agreement (EULA).</string>
    <string name="welcome_message">Welcome to Cliqz!</string>
    <string name="agree_privacy_policy_message">By using this application, you agree to the &lt;font color=\'#00aef0\'>Cliqz Privacy Policy &lt;/font></string>
    <string name="privacy_policy_title">Privacy Policy - Cliqz</string>
    <string name="send_usage_data_summary">Help us improve your browsing experience. Cliqz collects strictly anonymous usage data. At no occasion is any PII collected.</string>
    <string name="user_sentiment_survey_first_line_msg" tools:ignore="MissingTranslation">Hello! We’d like to know your opinion about the Cliqz Browser. i</string>
    <string name="action_incognito">New Forget Tab</string>
    <string name="open_in_incognito_tab">Open in new Forget Tab</string>
    <string name="switched_to_forget">Automatic Forget Tab enabled</string>
    <string name="open_link_forget_tab">Open link in Forget Tab</string>
    <string name="open_image_forget_tab">Open image in Forget Tab</string>
    <string name="incognito_tab_title">Forget Tab</string>
    <string name="incognito_tab_description">You are browsing in Forget Mode: websites you visit in this mode will not be saved in your history, and local data, including cookies, will not be stored.</string>
    <string name="auto_forget_tab">Automatic Forget Tab</string>
    <string name="cliqz_onboarding_welcome_text">Congrats on choosing Cliqz for private browsing</string>
    <string name="made_in_germany" translatable="false">Made in Germany</string>
    <string name="start">START</string>
</resources>
