...
        android:layout_weight="4"
        android:contentDescription="@string/descr_search_bar"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.cliqz.browser.widget.AutocompleteEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_medium"
            android:drawableRight="@drawable/ic_action_delete"
            android:focusable="true"
            android:focusableInTouchMode="true"
...
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#aaaaaa"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_medium"
            android:drawableRight="@drawable/ic_action_delete"
            android:gravity="left|center_vertical"
            android:paddingEnd="8dp"
...
