...
                    android:paddingEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/topnews_list"
                    android:background="@null"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
...
